# TEXTGRAPHS

./: README.md  pyproject.toml
configs/: exp1.json  mock.json  nlp_enjoyers.json  nlp_enjoyers_final.json  nlp_enjoyers_pairs.json
evaluation/: evaluate.py
src/: __init__.py  dataset.py  device.py  evaluate.py  main.py  model.py  print_dataset.py  test.py  train.py
