[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textgraphs17-shared-task"
version = "0.1.0"
description = "TextGraphs-17 shared task: baselines and evaluation helpers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "tqdm",
    "scikit-learn",
]

[project.scripts]
textgraphs = "src.main:main"

[tool.setuptools]
packages = ["src"]
