[build-system]
# setuptools>=69: editable/metadata fixes; discovery below avoids "src layout" confusion
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "textgraphs17-shared-task"
version = "0.1.0"
description = "TextGraphs-17 shared task: baselines and evaluation helpers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "transformers",
    "tqdm",
    "scikit-learn",
]

[project.scripts]
textgraphs = "src.main:main"

# The installable package is a top-level folder literally named "src". setuptools
# otherwise treats a top-level src/ as "src layout" and looks for *nested* packages
# (e.g. src/mypkg/), finds none, and editable metadata can fail with no .egg-info.
[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
